# otus-bulk-command

./: .gitignore  README.md
.github/workflows/: release.yaml
src/: CMakeLists.txt  versiondef.h
